--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Electron application and libraries to run the GPII as a native user space application on the desktop",
   "main": "main.js",
   "scripts": {
+    "start": "electron main.js",
+    "test": "powershell provisioning/Tests.ps1 -originalBuildScriptPath './node_modules/gpii-windows/provisioning'; electron tests.js"
   },
   "repository": {
     "type": "git",
@@ -18,15 +20,12 @@
     "grunt-shell": "1.3.0",
     "shelljs": "0.3.0"
   },
-  "scripts": {
-    "start": "electron main.js",
-    "test": "powershell provisioning/Tests.ps1 -originalBuildScriptPath './node_modules/gpii-windows/provisioning'; electron tests.js"
-  },
   "dependencies": {
     "electron": "1.4.1",
     "request": "2.69.0",
     "infusion": "3.0.0-dev.20170727T125648Z.47055ca",
     "gpii-windows": "git://github.com/GPII/windows.git#hst-2017",
-    "node-jqunit": "1.1.4"
+    "node-jqunit": "1.1.4",
+    "jquery": "^3.2.1"
   }
 }
