--- a/src/messageBundles/gpii-app-messageBundle_bg.json
+++ b/src/messageBundles/gpii-app-messageBundle_bg.json
@@ -1,15 +1,19 @@
 {
-    "gpii_app_menu_open-psp": "Отвори ППН",
-    "gpii_app_menu_status_not_keyed": "(Не сте влезли)",
-    "gpii_app_menu_status_keyed_in": "Вписан с %snapsetName",
-    "gpii_app_menu_keyed_out_btn": "Отписване от GPII",
+    "gpii_app_menu_psp": "Отвори ППН",
+    "gpii_app_menu_notKeyedIn": "(Не сте влезли)",
+    "gpii_app_menu_keyedIn": "Вписан с %snapsetName",
+    "gpii_app_menu_keyOut": "Отписване от GPII",
 
-    "gpii_app_restartWarning_restartTitle": "Промените изискват рестартиране.",
-    "gpii_app_restartWarning_osRestartText": "Windows изисква да бъде рестартиран, за да се приложат настройките.",
-    "gpii_app_restartWarning_restartText": "За да могат част от вашите настройки да бъдат приложени, следните приложения трябва да бъдат презаредени:",
-    "gpii_app_restartWarning_restartQuestion": "Какво бихте желали да направите?",
+    "gpii_app_menuInAppDev_locale": "Локализация",
+    "gpii_app_menuInAppDev_keyIn": "Вписване ...",
+    "gpii_app_menuInAppDev_exit": "Излез от GPII",
 
-    "gpii_app_restartWarning_undo": "Отказ\n(Отменете промените)",
-    "gpii_app_restartWarning_restartLater": "Затваряне и\n рестартиране по-късно",
-    "gpii_app_restartWarning_restartNow": "Рестартиране сега"
+    "gpii_psp_baseRestartWarning_osRestartText": "Windows изисква да бъде рестартиран, за да се приложат настройките.",
+    "gpii_psp_baseRestartWarning_restartText": "За да могат част от вашите настройки да бъдат приложени, следните приложения трябва да бъдат презаредени:",
+    "gpii_psp_baseRestartWarning_undo": "Отказ\n(Отменете промените)",
+    "gpii_psp_baseRestartWarning_restartLater": "Затваряне и\n рестартиране по-късно",
+    "gpii_psp_baseRestartWarning_restartNow": "Рестартиране сега",
+
+    "gpii_restartDialog_restartWarning_restartTitle": "Промените изискват рестартиране",
+    "gpii_restartDialog_restartWarning_restartQuestion": "Какво бихте желали да направите?"
 }
