--- a/src/messageBundles/gpii-app-messageBundle_en.json
+++ b/src/messageBundles/gpii-app-messageBundle_en.json
@@ -1,15 +1,19 @@
 {
-        "gpii_app_menu_open-psp": "Open PSP",
-        "gpii_app_menu_status_keyed_in": "Keyed in with %snapsetName",
-        "gpii_app_menu_status_not_keyed": "(No one keyed in)",
-        "gpii_app_menu_keyed_out_btn": "Key-out of GPII",
+    "gpii_app_menu_psp": "Open PSP",
+    "gpii_app_menu_notKeyedIn": "(No one keyed in)",
+    "gpii_app_menu_keyedIn": "Keyed in with %snapsetName",
+    "gpii_app_menu_keyOut": "Key-out of GPII",
 
-        "gpii_app_restartWarning_restartTitle": "Changes require restart",
-        "gpii_app_restartWarning_osRestartText": "Windows needs to restart to apply your changes.",
-        "gpii_app_restartWarning_restartText": "In order to be applied, some of the changes you made require the following applications to restart:",
-        "gpii_app_restartWarning_restartQuestion": "What would you like to do?",
+    "gpii_app_menuInAppDev_locale": "Locale",
+    "gpii_app_menuInAppDev_keyIn": "Key in ...",
+    "gpii_app_menuInAppDev_exit": "Exit GPII",
 
-        "gpii_app_restartWarning_undo": "Cancel\n(Undo Changes)",
-        "gpii_app_restartWarning_restartLater": "Close and\nRestart Later",
-        "gpii_app_restartWarning_restartNow": "Restart Now"
+    "gpii_psp_baseRestartWarning_osRestartText": "Windows needs to restart to apply your changes.",
+    "gpii_psp_baseRestartWarning_restartText": "In order to be applied, some of the changes you made require the following applications to restart:",
+    "gpii_psp_baseRestartWarning_undo": "Cancel\n(Undo Changes)",
+    "gpii_psp_baseRestartWarning_restartLater": "Close and\nRestart Later",
+    "gpii_psp_baseRestartWarning_restartNow": "Restart Now",
+
+    "gpii_restartDialog_restartWarning_restartTitle": "Changes require restart",
+    "gpii_restartDialog_restartWarning_restartQuestion": "What would you like to do?"
 }
