--- a/messageBundles/gpii-app-messageBundle_bg.json
+++ b/messageBundles/gpii-app-messageBundle_bg.json
@@ -1,4 +1,5 @@
 {
+    "gpii_app_menu_about": "Относно...",
     "gpii_app_menu_psp": "Отвори ППН",
     "gpii_app_menu_notKeyedIn": "(Не сте влезли)",
     "gpii_app_menu_keyedIn": "Вписан с %snapsetName",
@@ -7,10 +8,21 @@
     "gpii_app_tray_defaultTooltip": "GPII: В готовност",
     "gpii_app_tray_prefSetTooltip": "GPII: %prefSet",
 
-    "gpii_psp_splash_heading": "Не сте вписан",
-    "gpii_psp_splash_fullAppName": "GPII - Персонален Панел за Настройки",
-
     "gpii_psp_mainWindow_titlebarAppName": "GPII Настройки",
+
+    "gpii_psp_signin_signinHeader": "Никой не е вписан",
+
+    "gpii_psp_signin_titleIntro": "GPII Авто-персонализиране",
+    "gpii_psp_signin_subtitleIntro": "Автоматично приготвя компютъра ви по начина, по който го желаете.",
+
+    "gpii_psp_signin_title": "Използвайте вашият GPII ключ за да се впишете",
+    "gpii_psp_signin_subtitle": "Или се впишете с вашият акаунт долу",
+
+    "gpii_psp_signin_emailTextInputLabel": "Имейл",
+    "gpii_psp_signin_passwordInputLabel": "Парола",
+    "gpii_psp_signin_signinButton": "Впиши ме",
+    "gpii_psp_signin_signupButton": "Създай акаунт",
+    "gpii_psp_signin_forgotPasswordButton": "Забравена парола?",
 
     "gpii_psp_header_autosaveText": "Автоматично запазване е включено",
     "gpii_psp_header_keyOut":"Отпиши се",
