GPII-2928: Some further improvements for the sign in page

--- a/messageBundles/gpii-app-messageBundle_bg.json
+++ b/messageBundles/gpii-app-messageBundle_bg.json
@@ -10,19 +10,19 @@
 
     "gpii_psp_mainWindow_titlebarAppName": "GPII Настройки",
 
-    "gpii_psp_signin_signinHeader": "Никой не е вписан",
+    "gpii_psp_signIn_signInHeader": "Никой не е вписан",
 
-    "gpii_psp_signin_titleIntro": "GPII Авто-персонализиране",
-    "gpii_psp_signin_subtitleIntro": "Автоматично настройва компютъра ви по начина, по който желаете.",
+    "gpii_psp_signIn_titleIntro": "GPII Авто-персонализиране",
+    "gpii_psp_signIn_subtitleIntro": "Автоматично настройва компютъра ви по начина, по който желаете.",
 
-    "gpii_psp_signin_title": "Използвайте вашия GPII ключ за да се впишете",
-    "gpii_psp_signin_subtitle": "Или се впишете с вашия акаунт долу",
+    "gpii_psp_signIn_title": "Използвайте вашия GPII ключ за да се впишете",
+    "gpii_psp_signIn_subtitle": "Или се впишете с вашия акаунт долу",
 
-    "gpii_psp_signin_emailTextInputLabel": "Имейл",
-    "gpii_psp_signin_passwordInputLabel": "Парола",
-    "gpii_psp_signin_signinButton": "Впиши ме",
-    "gpii_psp_signin_signupButton": "Създай акаунт",
-    "gpii_psp_signin_forgotPasswordButton": "Забравена парола?",
+    "gpii_psp_signIn_emailTextInputLabel": "Имейл",
+    "gpii_psp_signIn_passwordInputLabel": "Парола",
+    "gpii_psp_signIn_signInButton": "Впиши ме",
+    "gpii_psp_signIn_signUpButton": "Създай акаунт",
+    "gpii_psp_signIn_forgotPasswordButton": "Забравена парола?",
 
     "gpii_psp_header_autosaveText": "Автоматично запазване е включено",
     "gpii_psp_header_keyOut":"Отпиши се",
