--- a/messageBundles/gpii-app-messageBundle_en.json
+++ b/messageBundles/gpii-app-messageBundle_en.json
@@ -10,19 +10,19 @@
 
     "gpii_psp_mainWindow_titlebarAppName": "GPII Settings",
 
-    "gpii_psp_signin_signinHeader": "Nobody keyed in",
+    "gpii_psp_signIn_signInHeader": "Nobody keyed in",
 
-    "gpii_psp_signin_titleIntro": "GPII Auto-personalization",
-    "gpii_psp_signin_subtitleIntro": "Automatically set up any computer the way you want it.",
+    "gpii_psp_signIn_titleIntro": "GPII Auto-personalization",
+    "gpii_psp_signIn_subtitleIntro": "Automatically set up any computer the way you want it.",
 
-    "gpii_psp_signin_title": "Use your GPII Key to key-in",
-    "gpii_psp_signin_subtitle": "Or key-in with your account below",
+    "gpii_psp_signIn_title": "Use your GPII Key to key-in",
+    "gpii_psp_signIn_subtitle": "Or key-in with your account below",
 
-    "gpii_psp_signin_emailTextInputLabel": "Email",
-    "gpii_psp_signin_passwordInputLabel": "Password",
-    "gpii_psp_signin_signinButton": "Sign in",
-    "gpii_psp_signin_signupButton": "Create an Account",
-    "gpii_psp_signin_forgotPasswordButton": "Forgot Password?",
+    "gpii_psp_signIn_emailTextInputLabel": "Email",
+    "gpii_psp_signIn_passwordInputLabel": "Password",
+    "gpii_psp_signIn_signInButton": "Sign in",
+    "gpii_psp_signIn_signUpButton": "Create an Account",
+    "gpii_psp_signIn_forgotPasswordButton": "Forgot Password?",
 
     "gpii_psp_header_autosaveText": "Auto-save is on",
     "gpii_psp_header_keyOut":"Key Out",
