--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     },
     "license": "BSD-3-Clause",
     "dependencies": {
+        "browserify": "^16.2.3",
         "electron": "1.8.8",
         "electron-edge-js": "8.3.8",
         "electron-localshortcut": "3.1.0",
@@ -22,7 +23,7 @@
         "electron-packager": "8.5.1",
         "eslint-config-fluid": "1.3.0",
         "gpii-grunt-lint-all": "1.0.5",
-        "gpii-testem": "2.1.1-dev.20180508T091631Z.1168649",
+        "gpii-testem": "^2.1.1-dev.20180508T091631Z.1168649",
         "graceful-fs": "4.1.11",
         "grunt": "1.0.3",
         "grunt-shell": "2.1.0",
@@ -40,6 +41,7 @@
         "pretest:instrument": "node tests/lib/instrumentSource.js",
         "test": "./node_modules/.bin/electron ./instrumented/tests.js",
         "posttest": "node node_modules/nyc/bin/nyc.js report --temp-directory coverage",
-        "test:noCoverage": "./node_modules/.bin/electron tests.js"
+        "test:noCoverage": "./node_modules/.bin/electron tests.js",
+        "test:renderer": "node ./node_modules/testem/testem.js ci --file src/renderer/testem.js"
     }
 }
