--- a/configs/app.base.json
+++ b/configs/app.base.json
@@ -22,6 +22,6 @@
         }
     },
     "mergeConfigs": [
-        "%gpii-universal/gpii/configs/gpii.config.untrusted.development.dynamicDR.all.local"
+        "%gpii-universal/gpii/configs/gpii.config.untrusted.development.dynamicDR.json5"
     ]
 }
